[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasa"
version = "0.1.0"
description = "Reproduction workspace for a dual-modal speech enhancement model."
requires-python = ">=3.12"
dependencies = [
  "torch>=2.8,<3.0",
  "numpy>=2.2,<3.0",
  "soundfile>=0.13,<1.0",
  "scipy>=1.16,<2.0",
  "librosa>=0.11,<1.0",
  "torchaudio>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
]

[tool.setuptools]
packages = ["models", "utils"]
